--- a/index.html
+++ b/index.html
@@ -94,27 +94,27 @@
         import { getFirestore, doc, getDoc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
         document.addEventListener('DOMContentLoaded', async function () {
-            // --- FIREBASE SETUP ---
-            const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
-            const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {};
-            const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : undefined;
+            // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
 
-            const app = initializeApp(firebaseConfig);
-            const db = getFirestore(app);
-            const auth = getAuth(app);
-            
-            try {
-                if (initialAuthToken) {
-                    await signInWithCustomToken(auth, initialAuthToken);
-                } else {
-                    await signInAnonymously(auth);
-                }
-            } catch (error) {
-                console.error("Authentication failed:", error);
-                return; // Stop execution if auth fails
-            }
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyDVapxR3iChP7DUC6dpUljrsmJSafRnHEs",
+  authDomain: "ecoonline-video-strategy.firebaseapp.com",
+  projectId: "ecoonline-video-strategy",
+  storageBucket: "ecoonline-video-strategy.firebasestorage.app",
+  messagingSenderId: "20338633719",
+  appId: "1:20338633719:web:43be9998517729dbd05cf2",
+  measurementId: "G-N7VQV8RDH3"
+};
 
-            const planDocRef = doc(db, `/artifacts/${appId}/public/data/contentPlan/planData`);
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
             
             // Default data structure if nothing is in the database
             const defaultContentData = [
