--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
     </div>
 
     <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
+        // Firebase Imports
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+        import { getAuth, signInAnonymously } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getFirestore, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
+        document.addEventListener('DOMContentLoaded', async function () {
+            // --- FIREBASE SETUP ---
+            // STEP 1: Replace this object with your own Firebase config object from the Firebase console.
+             const firebaseConfig = {
     apiKey: "AIzaSyDVapxR3iChP7DUC6dpUljrsmJSafRnHEs",
     authDomain: "ecoonline-video-strategy.firebaseapp.com",
     projectId: "ecoonline-video-strategy",
@@ -107,10 +107,18 @@
     measurementId: "G-D54RCB5Z0R"
   };
 
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-</script>
+            // Initialize Firebase
+            const app = initializeApp(firebaseConfig);
+            const db = getFirestore(app);
+            const auth = getAuth(app);
+            
+            try {
+                await signInAnonymously(auth);
+            } catch (error) {
+                console.error("Authentication failed:", error);
+                document.body.innerHTML = `<div class="text-center p-8 text-red-600">Could not connect to the database. Please check your Firebase configuration and security rules.</div>`;
+                return;
+            }
 
             // Sets a simple, consistent path for your data in the database
             const planDocRef = doc(db, "contentPlan", "planData");
@@ -343,4 +351,7 @@
     </script>
 </body>
 </html>
+
+
+
 
